Feat: Implemented basic chat frontend at root URL and fixed chat API response. Moved templates to root.

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <div class="chat-header">AI Chatbot</div>
+        <div class="chat-header">Qtec AI Engineer Task (Chatbot)</div>
         <div class="chat-messages" id="chat-messages">
             <!-- Messages will be appended here -->
         </div>
